[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Rust bindings for the VTE 3 library"
license = "MIT"
name = "vte-rs"
version = "0.2.0"

[dependencies]
bitflags = "1"
gdk-sys = { git="https://github.com/gtk-rs/sys" }
gdk = { git="https://github.com/gtk-rs/gdk" }
gio = { git="https://github.com/gtk-rs/gio" }
gio-sys = { git="https://github.com/gtk-rs/sys" }
glib = { git="https://github.com/gtk-rs/glib" }
glib-sys = { git="https://github.com/gtk-rs/sys" }
gobject-sys = { git="https://github.com/gtk-rs/sys" }
gtk = { git="https://github.com/gtk-rs/gtk" }
gtk-sys = { git="https://github.com/gtk-rs/sys" }
libc = ""
pango = { git="https://github.com/gtk-rs/pango" }
vte-sys = { path="vte-sys-rs"}

[lib]
name = "vte"

[features]
v0_40 = ["vte-sys/v0_40"]
v0_42 = ["v0_40", "vte-sys/v0_42"]
v0_44 = ["v0_42", "vte-sys/v0_44"]
v0_46 = ["v0_44", "vte-sys/v0_46"]
v0_48 = ["v0_46", "vte-sys/v0_48"]
