[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Rust bindings for the VTE 3 library"
license = "MIT"
name = "vte-rs"
version = "0.3.0"

[dependencies]
bitflags = "1"
gdk-sys = "0.9.1"
gdk = "0.12.1"
gio = "0.8.1"
gio-sys = "0.9.1"
glib = "0.9.3"
glib-sys = "0.9.1"
gobject-sys = "0.9.1"
gtk = "0.8.1"
gtk-sys = "0.9.2"
libc = "0.2.66"
pango = "0.8.0"
vte-sys = { path="vte-sys-rs"}

[lib]
name = "vte"

[features]
v0_40 = ["vte-sys/v0_40"]
v0_42 = ["v0_40", "vte-sys/v0_42"]
v0_44 = ["v0_42", "vte-sys/v0_44"]
v0_46 = ["v0_44", "vte-sys/v0_46"]
v0_48 = ["v0_46", "vte-sys/v0_48"]
